# BoGuan

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
boguan/: __init__.py  app.py  config.py  models.py
boguan/api/: __init__.py  agents.py  auth.py  chat.py  history.py  report.py
boguan/core/: __init__.py  email.py  pdf.py  runtime.py  skills.py  tools.py
docs/: architecture.md
examples/: alert_analysis_cli.py  list_mcp_tools.py  quick_test.py
skills/alert-analysis/: SKILL.md
skills/email-report/: SKILL.md
skills/monitoring-assistant/: SKILL.md
skills/pdf-report/: SKILL.md
static/: index.html  login.html  platform.html
tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_config.py  test_models.py  test_skills.py
